--- a/css/dropdownlist.css
+++ b/css/dropdownlist.css
@@ -14,61 +14,86 @@ a{
 }
 
 .button{
-    border:1px solid #d14836;
-    border-radius: 3px;
-    background-color: #d14836;
-    padding: 6px 40px;
-    text-align:center;
-    color: #fff;
-    font-weight: bold;
-    text-transform: uppercase;
-    display: inline-block;
+    border: 1px solid #d14836;
+    border-radius: 4px;
+    background: #d14836;
+    padding: 7px 1px;
+    margin: 10px;
     cursor: default;
 }
-.button a{
-    font-size: 11px;
-    line-height: 27px;
+
+.button-inner {
+    padding: 5px 40px;
+    display: inline-block;
+    color: #fff;
+    font-weight: 600;
+    text-align: center;
     text-decoration: none;
+    text-transform: uppercase;
 }
+.change-button{
+    display: none;
+    position: relative;
+    border: 1px solid #fff;
+    width: 108px;
+    height: 25px;
+    top: -26px;
+    left: 12px;
+    cursor: default;
+}
+
 .button:hover{
+    border: 1px solid #b0281a;
     background-color: #c53727;
-}
-.button:active{
-    border: thick double #fff;
+    background-image: -webkit-linear-gradient(#dd4b39, #c53727);
+    background-image: -moz-linear-gradient(#dd4b39, #c53727);
+    background-image: -o-linear-gradient(#dd4b39, #c53727);
+    background-image: linear-gradient(#dd4b39, #c53727);
+    box-shadow: 10px 10px 5px 3px rgbs(0,0,0,0.2);
+    -webkit-box-shadow: 10px 10px 5px 3px rgbs(0,0,0,0.2);
+    -moz-box-shadow: 10px 10px 5px 3px rgbs(0,0,0,0.2);
 }
 .dropdownlist{
-    background-color:#fff;
     display: none;
-    margin: 0;
-    padding: 5px 0;
+    border: 1px solid transparent;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px 0px rgba(107,104,107,0.5);
+    margin-top: 3px;
+    padding-left: 0px;
+    padding-top: 5px;
+    position: relative;
+    top: -26px;
+    left: 10px;
+    max-width: 250px;
     list-style: none;
-    width: 200px;
-    -webkit-box-shadow: 0px 0px 5px 3px rgba(211,211,211,1);
-    -moz-box-shadow: 0px 0px 5px 3px rgba(211,211,211,1);
-    box-shadow: 0px 0px 5px 3px rgba(211,211,211,1);
+    cursor: pointer;
 }
-.dropdownlist li{
-    padding: 3px 0;
+.itemddl{
+    padding: 5px 0 5px 20px ;
 }
-
-.dropdownlist li:hover{
+.itemddl a{
+    position: relative;
+    margin: 0 15px;
+    top: -8px;
+    display: inline-block;
+}
+.more-itemddl{
+    padding: 5px 0 5px 60px;
+    line-height: 29px;
+    height: 29px;
+    margin-bottom: 5px;
+}
+.displayIcon{
+    position: absolute;
+    right: 20px;
+}
+.change:hover {
     border-left: 5px solid #aaa;
     background-color: #eee;
-}
-
-.dropdownlist li a{
-    display: block;
-    padding: 5px 20px;
-}
-.dropdownlist li:hover a{
     padding-left: 15px;
 }
-.dropdownlist .divider{
-    max-height: 1px;
-    overflow: hidden;
-    background-color: #e5e5e5;
-}
-
-.displayCarlet {
-    margin-left: 115px;
+.changemore:hover{
+    border-left: 5px solid #aaa;
+    background-color: #eee;
+    padding: 5px 0 5px 55px;
 }
