--- a/css/slider.css
+++ b/css/slider.css
@@ -80,12 +80,11 @@
     background-color: transparent;
 }
 
-.previous:hover:before {
+.slider:hover .previous:before {
     left: 10px;
-
 }
 
-.previous:hover {
+.slider:hover .previous {
     border: transparent;
     background-color: transparent;
     background-image: linear-gradient(transparent, transparent);
@@ -115,11 +114,11 @@
     background-color: transparent;
 }
 
-.next:hover:before {
+.slider:hover .next:before {
     right: 10px;
 }
 
-.next:hover {
+.slider:hover .next {
     border: transparent;
     background-color: transparent;
     background-image: linear-gradient(transparent, transparent);
